--- a/2018/11/basketball-preview/style.css
+++ b/2018/11/basketball-preview/style.css
@@ -61,30 +61,39 @@ a:hover h5 {
   font-style: normal;
 }
 
-.ps-header-div {
+.ps-header-div, .standings-header-div {
   display: flex;
   flex-direction: column;
   font-size: xx-large;
   margin-bottom: 10px
 }
 
-.ps-top-header-m, .ps-top-header-w {
+.ps-top-header-m, .ps-top-header-w, .standings-top-header-m {
   align-self: flex-start;
   padding-left: 5px;
   padding-right: 5px;
   padding-bottom: 3px;
 }
 
-.ps-bottom-header-m, .ps-bottom-header-w {
+.ps-bottom-header-m, .ps-bottom-header-w, .standings-bottom-header-m {
   align-self: flex-end;
   font-style: italic;
-  font-weight: 700;
   padding-left: 5px;
   padding-right: 5px;
   padding-bottom: 3px;
 }
 
-.ps-top-header-m, .ps-bottom-header-m {
+.ps-bottom-header-m, .ps-bottom-header-w, .standings-top-header-m, .standings-top-header-w {
+  font-weight: 700;
+}
+
+.standings-bottom-header-m {
+  font-weight: lighter;
+  font-size: 24px;
+}
+
+
+.ps-top-header-m, .ps-bottom-header-m, .standings-top-header-m, .standings-bottom-header-m {
   background-image: linear-gradient(transparent 50%, rgb(244, 14, 57) 50%);
 }
 
@@ -210,7 +219,9 @@ a:hover h5 {
 }
 
 .accent {
-  background-color: #e5e5e5;
+  color: white;
+  background-color: rgb(198, 202, 203);
+  text-transform: uppercase;
 }
 
 .right {
