--- a/2018/11/basketball-preview/style.css
+++ b/2018/11/basketball-preview/style.css
@@ -98,6 +98,18 @@ a:hover h5 {
   text-align: center;
 }
 
+.ad-container {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.ad {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+  padding: 0;
+}
+
 .polls-container {
   padding-bottom: 100px;
 }
