--- a/2018/12/year-in-review/style.css
+++ b/2018/12/year-in-review/style.css
@@ -13,7 +13,7 @@ a {
   color: black;
 }
 
-h3 {
+a, h3 {
   margin-bottom: 50px;
 }
 
@@ -100,4 +100,25 @@ img {
 
 .blurb {
   margin-top: 10px;
+}
+
+#multimedia {
+  background-color: grey;
+  padding: 25px;
+}
+
+.small-images {
+  width: 100%;
+  height: 150px;
+  background-color: black;
+  margin-bottom: 10px;
+}
+
+.large-image {
+  width: 100%;
+  height: 180px;
+}
+
+.photo-blurb {
+  text-align: center;
 }
