--- a/2018/12/year-in-review/style.css
+++ b/2018/12/year-in-review/style.css
@@ -77,6 +77,7 @@ img {
 #eagles {
   background-color: grey;
   padding: 20px;
+  margin-top: 25px;
 }
 
 .article-block {
@@ -105,6 +106,7 @@ img {
 #multimedia {
   background-color: grey;
   padding: 25px;
+  margin-top: 25px;
 }
 
 .small-images {
@@ -121,4 +123,18 @@ img {
 
 .photo-blurb {
   text-align: center;
+}
+
+.big-visual {
+  background-color: black;
+  width: 100%;
+  height: 470px;
+}
+
+.video-text {
+  margin-top: 10px;
+}
+
+.margin-top {
+  margin-top: 40px;
 }
