--- a/2018/12/year-in-review/style.css
+++ b/2018/12/year-in-review/style.css
@@ -1,110 +1,113 @@
-@import url('https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:200,700');
+@import url('https://use.typekit.net/gpp1vtp.css');
 
 body {
-  font-family: 'Barlow Semi Condensed', sans-serif;
-  font-weight: 200;
+	font-family: 'proxima-nova', sans-serif;
+	font-weight: 300;
 }
 
-h1, h2, h3, h4 {
-  font-weight: 700;
+h1,
+h2,
+h3,
+h4 {
+	font-weight: 700;
 }
 
 h3 {
-  margin-bottom: 50px;
+	margin-bottom: 50px;
 }
 
 a {
-  color: #000;
+	color: #000;
 }
 
 img {
-  margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 .header {
-  display: flex;
-  justify-content: center;
-  padding: 10px 0 0;
-  background-color: #000;
-  margin-bottom: 20px;
+	display: flex;
+	justify-content: center;
+	padding: 10px 0 0;
+	background-color: #000;
+	margin-bottom: 20px;
 }
 
 .header-image {
-  width: 600px;
-  height: auto;
-  display: block;
-  margin: auto;
+	width: 600px;
+	height: auto;
+	display: block;
+	margin: auto;
 }
 
 .banner {
-  background-color: #CCC;
-  padding: 10px;
-  margin-bottom: 15px;
+	background-color: #ccc;
+	padding: 10px;
+	margin-bottom: 15px;
 }
 
 .quick-links {
-  background-color: #CCC;
-  padding: 20px;
-  height: 100%;
+	background-color: #ccc;
+	padding: 20px;
+	height: 100%;
 }
 
 .links {
-  margin-top: 30px;
-  color: #000;
+	margin-top: 30px;
+	color: #000;
 }
 
 .blurb {
-  background-color: #CCC;
-  padding: 10px;
+	background-color: #ccc;
+	padding: 10px;
 }
 
 .embed-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
+	position: relative;
+	padding-bottom: 56.25%;
+	height: 0;
+	overflow: hidden;
+	max-width: 100%;
 }
 
 .embed-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .article-block {
-  padding: 10px;
+	padding: 10px;
 }
 
 .section-title {
-  text-align: center;
-  margin-bottom: 30px;
+	text-align: center;
+	margin-bottom: 30px;
 }
 
 .upper-section {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .blurb {
-  margin-top: 10px;
+	margin-top: 10px;
 }
 
 .photo-blurb {
-  text-align: center;
+	text-align: center;
 }
 
 .big-visual {
-  background-color: #000;
-  width: 100%;
-  height: 500px;
+	background-color: #000;
+	width: 100%;
+	height: 500px;
 }
 
 .video-text {
-  margin-top: 10px;
+	margin-top: 10px;
 }
 
 .margin-top {
-  margin-top: 40px;
+	margin-top: 40px;
 }
