--- a/2018/12/year-in-review/style.css
+++ b/2018/12/year-in-review/style.css
@@ -14,6 +14,10 @@ body {
 	color: white;
 }
 
+.teal a:hover {
+	color: #d1d1d1;
+}
+
 .fresh {
 	background-color: #CCDFC8;
 }
@@ -39,6 +43,11 @@ h3 {
 
 a {
 	color: #000;
+}
+
+a:hover {
+	color: #5b5b5b;
+	text-decoration: none;
 }
 
 img {
@@ -150,7 +159,7 @@ img {
 	h3 {
 		margin-bottom: 15px;
 	}
-	
+
 	.big-visual {
 		height: 240px;
 	}
