--- a/2018/12/year-in-review/style.css
+++ b/2018/12/year-in-review/style.css
@@ -128,6 +128,10 @@ a:hover {
 	margin-top: 40px;
 }
 
+.margin-bottom {
+	margin-bottom: 40px;
+}
+
 .street-box {
 	display: block;
 	margin-top: 20px;
