add year in review to main projects page

--- a/style.css
+++ b/style.css
@@ -67,8 +67,8 @@ nav img {
   font-size: 16px;
   color: #777;
   text-transform: uppercase;
-  padding-top: 5px;
-  padding-bottom: 0;
+  margin-top: 10px;
+  margin-bottom: 0;
   font-weight: 200;
 }
 
