--- a/2019/join/style.css
+++ b/2019/join/style.css
@@ -8,6 +8,10 @@ body {
   background-color: #EEE;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1, h2, h3, h4, h5 {
   font-family: 'Playfair Display', serif;
   font-weight: 400;
